<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_main"
        android:title="@string/main_settings">
        <Preference
            android:key="@string/pref_sync"
            android:title="@string/last_sync" />
        <Preference
            android:key="@string/pref_userid"
            android:title="@string/user_identifier"/>
        <org.poseidon_project.context.ui.TimePreferenceDialog
            android:key="@string/pref_backuptime"
            android:title="@string/backup_time"
            android:defaultValue="20:00"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key=""
        android:title="@string/weather_settings">

    </PreferenceCategory>

</PreferenceScreen>